处理rag检索失准和llm幻象问题

--- a/项目架构.md
+++ b/项目架构.md
@@ -29,10 +29,12 @@
 - ✅ 文本分片处理
 - ✅ 向量化处理
 - ✅ Milvus向量存储
+- ✅ Elasticsearch关键词索引构建
 
 #### 1.4 对话管理服务 (chat-service)
 - ✅ 智能问答接口
-- ✅ 向量检索集成
+- ✅ 混合检索集成（Elasticsearch + Milvus）
+- ✅ BGE-Reranker重排序
 - ✅ 大模型对话生成
 - ✅ 对话历史管理
 - ✅ Redis缓存对话上下文
@@ -46,11 +48,16 @@
 
 #### 1.6 AI引擎模块 (ai-engine)
 - ✅ 文本预处理和清洗
-- ✅ 智能文本分片（200-500字符/块）
+- ✅ 智能文本分片（200-500字符/块，支持重叠分块）
 - ✅ 文本向量化服务
 - ✅ Milvus向量数据库集成
+- ✅ Elasticsearch关键词检索集成
+- ✅ 混合检索服务（HybridRetrievalService）
+- ✅ 查询路由分析（关键词主导 vs 语义意图主导）
+- ✅ BGE-Reranker重排序服务
 - ✅ DeepSeek LLM集成
 - ✅ RAG Prompt工程
+- ✅ 增强检索服务（EnhancedRetrievalService）
 
 #### 1.7 公共模块 (common)
 - ✅ 统一返回结果封装
@@ -101,6 +108,12 @@
 - ✅ 向量相似度搜索
 - ✅ 索引创建
 
+#### 3.5 Elasticsearch全文搜索引擎
+- ✅ 索引创建和管理
+- ✅ 文档块索引（支持IK分词器）
+- ✅ 关键词检索（多字段搜索）
+- ✅ 按文档ID删除索引
+
 ## 技术架构
 
 ```
@@ -118,14 +131,20 @@ AI引擎层
     ├── 文本预处理
     ├── 文本分片
     ├── 向量化
-    ├── 向量检索
+    ├── 混合检索
+    │   ├── Elasticsearch关键词检索
+    │   ├── Milvus向量检索
+    │   ├── 查询路由分析
+    │   ├── 结果融合
+    │   └── BGE-Reranker重排序
     └── 大模型生成
     ↓
 数据存储层
     ├── MySQL (元数据)
     ├── Redis (缓存)
     ├── MinIO (文件)
-    └── Milvus (向量)
+    ├── Milvus (向量存储)
+    └── Elasticsearch (关键词索引)
 ```
 
 ## 核心业务流程
@@ -135,19 +154,31 @@ AI引擎层
 2. 文件存入MinIO → 记录元数据到MySQL
 3. 触发文档解析服务
 4. 文档解析 → 文本提取 → 清洗 → 分片
-5. 文本向量化 → 存入Milvus
+5. 并行构建索引
+   - 文本向量化 → 存入Milvus（向量索引）
+   - 文档块索引 → 存入Elasticsearch（关键词索引）
 6. 更新文档状态为"解析完成"
 
-### 智能问答流程
+### 智能问答流程（混合检索）
 1. 用户提问 → 对话管理服务
-2. 问题向量化
-3. Milvus向量检索（Top 5相关文本块）
-4. 判断是否有相关文档内容
+2. 查询路由分析（判断关键词主导 vs 语义意图主导）
+3. 并行检索
+   - Elasticsearch关键词检索（Top N）
+   - Milvus向量检索（Top N）
+4. 结果融合（加权合并两种检索结果）
+5. BGE-Reranker重排序（精排Top K）
+6. 结果去重
+7. 判断是否有相关文档内容
    - 有：RAG模式（基于文档内容回答）
    - 无：通用模式（AI自由回答）
-5. 调用DeepSeek生成回答
-6. 保存对话历史
-7. 返回回答给前端
+8. 调用DeepSeek生成回答
+9. 保存对话历史
+10. 返回回答给前端
+
+**回退机制**：
+- 优先使用混合检索（ES + Milvus + Reranker）
+- ES不可用时回退到增强检索（EnhancedRetrievalService）
+- 都不可用时回退到基础向量检索
 
 ## 项目结构
 
@@ -192,7 +223,16 @@ smart-doc-qa/
    - Host / Port
    - Collection名称
 
-4. **AI服务配置**
+4. **Elasticsearch配置**（文档解析服务、对话服务）
+   - Host / Port
+   - Index名称
+   - IK分词器（中文必需）
+
+5. **BGE-Reranker配置**（对话服务，可选）
+   - 是否启用
+   - API URL
+
+6. **AI服务配置**
    - Embedding API URL和模型
    - DeepSeek API Key和模型
 
@@ -202,6 +242,7 @@ smart-doc-qa/
 - Redis: localhost:6379
 - MinIO: localhost:9000
 - Milvus: localhost:19530
+- Elasticsearch: localhost:9200
 - 网关: localhost:8080
 - 前端: localhost:3000
 
@@ -241,13 +282,34 @@ smart-doc-qa/
 1. **Embedding服务**：需要单独部署Embedding API服务，或使用云服务
 2. **DeepSeek API**：需要申请API Key并配置
 3. **Milvus版本**：建议使用2.3.x版本，已测试兼容
-4. **内存数据库**：MySQL建议使用内存型数据库以提高性能
-5. **生产环境**：建议使用Docker容器化部署，便于管理
+4. **Elasticsearch**：
+   - 建议使用7.17.9版本
+   - 必须安装IK分词器插件（中文分词必需）
+   - 如果ES不可用，系统会自动回退到增强检索或基础向量检索
+5. **BGE-Reranker**：可选组件，不启用时使用综合分数排序
+6. **内存数据库**：MySQL建议使用内存型数据库以提高性能
+7. **生产环境**：建议使用Docker容器化部署，便于管理
+
+## 核心技术亮点
+
+### 混合检索系统
+- **Elasticsearch关键词检索**：支持精确的关键词匹配和全文搜索
+- **Milvus向量检索**：支持语义相似度搜索
+- **查询路由**：根据查询特征自动调整两种检索的权重
+- **BGE-Reranker重排序**：使用交叉编码器模型进行精排
+- **多级回退机制**：确保系统稳定运行
+
+### RAG优化策略
+- **重叠分块**：避免边界信息丢失
+- **混合检索**：结合关键词和语义检索优势
+- **重排序**：提高检索结果相关性
+- **去重**：避免返回重复信息
 
 ## 技术支持
 
 如有问题，请查看：
 - README.md - 项目说明
 - DEPLOYMENT.md - 部署指南
+- backend/HYBRID_RETRIEVAL_GUIDE.md - 混合检索系统指南
 - 各服务的application.yml - 配置说明
 
